--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/encodings.xml
+.idea/vcs.xml
+.idea/misc.xml
 *.iws
 *.iml
 *.ipr
